--- a/vite/vite-test/index.html
+++ b/vite/vite-test/index.html
@@ -14,7 +14,7 @@
   <title>vite-test</title>
 </head>
 <body>
-  
+  <div class="vite-div">vite支持css</div>
 </body>
 </html>
 <script src="./main.js" type="module">
