去除无用的注释

--- a/vite/vite-test/index.html
+++ b/vite/vite-test/index.html
@@ -1,10 +1,4 @@
-<!--
- * @Author: lrm
- * @Date: 2022-11-03 00:14:47
- * @LastEditors: lrm
- * @LastEditTime: 2022-11-03 00:17:37
- * @FilePath: \vite-test\index.html
--->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +8,7 @@
   <title>vite-test</title>
 </head>
 <body>
-  <div class="vite-div">vite支持css</div>
+  <div class="vite-div">学习vite</div>
 </body>
 </html>
 <script src="./main.js" type="module">
