--- a/vite/vite-test/index.html
+++ b/vite/vite-test/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vite-test</title>
+  <title>
+    <%= title %>
+  </title>
 </head>
 <body>
-  <div class="vite-div">学习vite</div>
+  <!-- <div class="vite-div">学习vite</div> -->
+  <%= title %>
 </body>
 </html>
 <script src="./main.js" type="module">
