--- a/im-tsupdate/index.html
+++ b/im-tsupdate/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>index</title>
+  <script src="./src/4-2.js"></script>
 </head>
+
 <body>
   <div>index</div>
 </body>
+
 </html>
